<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/found_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Found Items"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="normal"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="0dp" />

    <SearchView
        android:id="@+id/search_bar_foundItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </SearchView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.89">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/FoundItemList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="40dp" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/Back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back" />

</LinearLayout>