<resources>
    <string name="app_name">WheresMyStuff</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <!--<string name="action_sign_in">Sign in or register</string> -->
    <string name="action_sign_in_short">Sign in</string>
    <!--<string name="error_invalid_email">This email address is invalid</string> -->
    <string name="error_invalid_password">This password is too short</string>
    <!--<string name="error_incorrect_password">This password is incorrect</string> -->
    <!-- <string name="error_field_required">This field is required</string> -->
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register</string>
    <!--<string name="unfinishedPlaceholder">Welcome to The Unfinished App!</string> -->
    <!--<string name="LogoutButton">Logout</string> -->
    <!--<string name="title_activity_application">ApplicationActivity</string> -->
    <string name="lost_item_title">Lost items</string>
    <string name="exit_app_message">Close</string>
    <string name="title_activity_lost_items">LostItems</string>
    <string name="title_activity_add_item">Add a Item</string>
    <string name="item_name_field">Name of Item</string>
    <string name="item_description_field">Description of Item</string>
    <string name="list_item_button">List Item as Missing</string>
    <string name="cancel_item_list">Cancel</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <!--<string name="app_label">Lost Items</string> -->
    <!--<string name="search_hint">Search lost items</string> -->
    <string name="title_activity_maps">Map</string>
</resources>
