<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/Homepage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Home Page"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/LostItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="LostItems" />

    <Button
        android:id="@+id/FoundItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Found Items" />

    <Button
        android:id="@+id/AddItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Item" />

    <Button
        android:id="@+id/MapScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Map" />
</LinearLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_weight="0.21"
        android:layout_marginLeft="-140dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/mario_run" />
</RelativeLayout>
